--- a/v2/index.html
+++ b/v2/index.html
@@ -171,15 +171,15 @@
         <form method="post">
           <div><label>Nombre de usuario: </label></div>
           <input type="text"
-                id="username">
+                class="formulario">
           <div><label for="email">Email: </label></div>
-          <input type="email">
+          <input type="email" class="formulario">
           <div><label for="Ratio">Nota: </label></div>
           <input type="range" id="Ratio">
-          <div><textarea name="coment" cols="30" rows="10"></textarea></div>
+          <div><textarea name="coment" cols="30" rows="10"  class="formulario"></textarea></div>
           <div>
-            <input type="reset" value="Borrar formulario">
-            <input type="button" value="Envíar formulario">
+            <input type="reset" value="Borrar formulario"  class="boton">
+            <input type="button" value="Envíar formulario"  class="boton">
           </div>
         </form>
       </article></div>
@@ -212,6 +212,9 @@
         </table>
       </div>
   </div>
+  </div>
+  <div class="footer2">
+    <button class="wiki_link"><a href="https://es.wikipedia.org/wiki/Jurassic_World:_El_reino_caído" target="_blank">Wikipedia</a></button>
   </div>
   </body>
 </html>
